# file-splitter

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_tests.sh
.tests/output_dir/: test_output.sql
file_splitter/: __main__.py  file_diff.py  file_split.py
lib/: file.py  split.py
output/f2/: config2.yml
src/file_splitter/: __init__.py
test/: test_splltter.py
test/input/: sample.txt
test/output/f1/: config1.yml
test/output/f2/: config2.yml
tests/: run_integration_tests.sh  run_tests.sh  test_differ.py  test_input.sql  test_input.txt  test_input_vernew.txt
tests/output_dir/: test_output.sql
