# source: https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "file-splitter"
version = "1.0.3"
description = "Given a separator string, split file into multiple files."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["file", "utility", "util", "development"]
authors = [
  {name = "Ho Cam", email = "ho@infostrux.com" }
]

maintainers = [
  {name = "Ho Cam", email = "ho@infostrux.com" },
  {name = "Milan Mosny", email = "milan@infostrux.com" }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache 2.0",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.19.0"
]
test = [
    "pytest>=7.1.2"
]

[project.urls]
"Homepage" = "https://github.com/Infostrux-Solutions/file-splitter"
"Bug Reports" = "https://github.com/Infostrux-Solutions/file-splitter/issues"
"Source" = "https://github.com/Infostrux-Solutions/file-splitter"

[project.scripts]
file-splitter = "file_splitter:main"


[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}